--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                         <img src="~/recursos/logo.png" alt="logo" width="75%" height="75%" />
                     </div>
                 </div>
-                <hr>
+            <div class="border-top w-75 align-self-center" style="border-color:#ffffff; opacity:0.3;border-top-width: 26em"></div>
                 <div class="links">
                     <a href="https://twitch.tv/elshandrew" target="_blank">
                         <div class="twitch">
