--- a/ShandrewPage/Views/Shared/_Layout.cshtml.css
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml.css
@@ -41,8 +41,9 @@ button.accept-policy {
 
 .footer {
   position: absolute;
-  bottom: 0;
+  bottom: 50px;
   width: 100%;
+
   white-space: nowrap;
-  line-height: 60px;
+  line-height: 0px;
 }
