--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -5,27 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shandrew Card</title>
     <link rel="icon" href="~/recursos/Sin título-9.png" type="image/x-icon">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ShandrewPage.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-opacity-0   mb-3 ">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-opacity-0">
             <div class="container-fluid">
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
+                <div class="navbar-collapse collapse d-sm-inline-flex ">
+                    <ul class="navbar-nav text-center justify-content-center flex-grow-1">
+                        <li class="nav-item m-2">
+                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Portafolio" asp-action="Index">Portafolio</a>
+                        <li class="nav-item m-2">
+                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="" asp-action=""><i class="bi bi-person-fill"></i></a>
+                        </li>
+                        <li class="nav-item m-2">
+
+                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-brush-fill"></i></a>
+                        </li>
+                        <li class="nav-item m-2">
+
+                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-coin"></i></a>
+                        </li>
+                        <li class="nav-item m-2">
+
+                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-info-lg"></i></a>
+                        </li>
+                        <li class="nav-item m-2">
+
+                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-question-lg"></i></a>
+                        </li>
+                        <li class="nav-item m-2">
+
+                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-postcard-heart-fill"></i></a>
                         </li>
                     </ul>
                 </div>
