--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -4,7 +4,13 @@
 <link rel="stylesheet" href="~/css/home.css" />
 <section class="homebak">
     <div class="noche">
-    
+        <div class="column">
+            <img class="logo" src="~/recursos/logo.png" />
+        </div>
+        <div class="column">
+            <img class="shan" src="~/recursos/police.png" />
+        </div>
+     
     </div>
    
 </section>
