--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -20,11 +20,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex ">
-                    <ul class="navbar-nav text-center justify-content-center flex-grow-1">
+                    <ul class="navbar-nav text-center justify-content-center flex-grow-1 fixed-top ">
                         <li class="nav-item m-2">
-                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
+                            <a class="nav-link bg-light rounded-3 " asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
                         </li>
-                        <li class="nav-item m-2">
+                        <li class="nav-item m-2 ">
                             <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="" asp-action=""><i class="bi bi-person-fill"></i></a>
                         </li>
                         <li class="nav-item m-2">
