--- a/ShandrewPage/wwwroot/css/home.css
+++ b/ShandrewPage/wwwroot/css/home.css
@@ -1,15 +1,45 @@
 ﻿@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
-body {
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-    
-    overflow: hidden;
-
+.homebak {
+    height: 100vh;
+    display: flex;
+   justify-content:center;
+   justify-items:center;
 }
-.stars{
-    font-size:3em;
+
+body {
+    background-image: url(../recursos/BG.gif);
+    background-size:cover;
+    overflow-x: hidden;
 }
 .noche {
+    display: flex;
+    justify-content:space-around;
+    flex-wrap: wrap;
+}
+.columna {
+    flex: 1;
+    box-sizing: border-box;
+    padding: 10px;
+    margin: 5px;
+}
+.logo {
+    width: 100%;
+    max-width: 640px;
+    height: auto;
+    animation: escale ease 4s infinite alternate;
+}
+.shan {
 
-    transform: rotateZ(8deg);
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+}
+@keyframes escale{
+    0%{
+        transform:scale(1);
+    }
+    100% {
+        transform: scale(1.05);
+    }
 }
 
