--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -6,11 +6,46 @@
     <div class="noche">
         <div class="column">
             <img class="logo" src="~/recursos/logo.png" />
+            <div class="redes">
+                <a href="https://twitch.tv/elshandrew" target="_blank">
+                    <i class="bi bi-twitch bis"></i>
+                </a>
+                @Html.Raw("<a href='https://www.tiktok.com/@elshandrew' target='_blank'>")
+                    <i class="bi bi-tiktok bis"></i>
+                @Html.Raw("</a>")
+                <a href="https://twitter.com/ElShandrew" target="_blank">
+                    <i class="bi bi-twitter bis"></i>
+                </a>
+                @Html.Raw("<a href='https://www.youtube.com/@Shandrew' target='_blank'>")
+                    <i class="bi bi-youtube bis"></i>
+                @Html.Raw("</a>")
+                <a href="https://www.instagram.com/elshandrew/" target="_blank">
+                    <i class="bi bi-instagram bis"></i>
+                </a>
+                <a href="https://discord.com/invite/KtCBAfneRy" target="_blank">
+                    <i class="bi bi-discord bis"></i>
+                </a>
+            </div>
+            <div class="mt-4 text-center">
+                <span class="com1">Commissions: <span class="com2">OPEN</span></span>
+                
+            </div>
+            <div class="mt-2 text-center">
+                <span class="desc">Shandrew - Junior Developer; Digital Artist; Vtuber.</span>
+            </div>
+            <div class="mt-2 text-center">
+                <span class="desc">About commissions please send an email to</span>
+               
+            </div>
+            <div class="mt-2 text-center">
+                <span class="desc">shandrewcontact@gmail.com or contact me in Twitter</span>
+
+            </div>
         </div>
         <div class="column">
             <img class="shan" src="~/recursos/police.png" />
         </div>
-     
+
     </div>
-   
+
 </section>
