--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -20,32 +20,32 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex ">
-                    <ul class="navbar-nav text-center justify-content-center flex-grow-1 fixed-top ">
-                        <li class="nav-item m-2">
-                            <a class="nav-link bg-light rounded-3 " asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
+                    <ul class="navbar-nav text-center justify-content-center  flex-grow-1 fixed-top mt-4 ">
+                        <li class="nav-item m-2 ">
+                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
                         </li>
                         <li class="nav-item m-2 ">
-                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="" asp-action=""><i class="bi bi-person-fill"></i></a>
+                            <a class="nav-link text-black " asp-area="" asp-controller="" asp-action=""><i class="bi bi-person-fill"></i></a>
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-brush-fill"></i></a>
+                            <a class="nav-link text-black  " asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-brush-fill"></i></a>
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-coin"></i></a>
+                            <a class="nav-link text-black  " asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-coin"></i></a>
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-info-lg"></i></a>
+                            <a class="nav-link text-black " asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-info-lg"></i></a>
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-question-lg"></i></a>
+                            <a class="nav-link text-black " asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-question-lg"></i></a>
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link bg-light rounded-3" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-postcard-heart-fill"></i></a>
+                            <a class="nav-link text-black" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-postcard-heart-fill"></i></a>
                         </li>
                     </ul>
                 </div>
