--- a/ShandrewPage/Views/Shared/_Layout.cshtml.css
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml.css
@@ -2,16 +2,25 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
- 
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
-
+.navbar{
+    padding-top:6.5rem;
+}
 a {
-  color: #0077cc;
+    
+    color: #0077cc;
 }
-
+.nav-item {
+    
+    font-size: 20px;
+    background-color: white;
+    border-radius: 10px;
+    width: 45px;
+}
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
@@ -19,10 +28,10 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .border-top {
