--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -2,10 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 <link rel="stylesheet" href="~/css/home.css" />
+<link rel="stylesheet" href="~/css/home-responsive.css" />
 <section class="homebak">
     <div class="noche">
-        <div class="column">
-            <img class="logo" src="~/recursos/logo.png" />
+        <div class="columna">
+
+            <div class="log">
+                <img class="logo" src="~/recursos/logo.png" />
+            </div>
+           
             <div class="redes">
                 <a href="https://twitch.tv/elshandrew" target="_blank">
                     <i class="bi bi-twitch bis"></i>
@@ -26,6 +31,7 @@
                     <i class="bi bi-discord bis"></i>
                 </a>
             </div>
+            
             <div class="mt-4 text-center">
                 <span class="com1">Commissions: <span class="com2">OPEN</span></span>
                 
@@ -42,8 +48,10 @@
 
             </div>
         </div>
-        <div class="column">
-            <img class="shan" src="~/recursos/police.png" />
+        <div class="columna">
+            <div class="sh">
+                <img class="shan" src="~/recursos/police.png" />
+            </div>
         </div>
 
     </div>
