cambios de responsive

--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -3,15 +3,15 @@
 }
 <link rel="stylesheet" href="~/css/home.css" />
 <link rel="stylesheet" href="~/css/home-responsive.css" />
-<section class="homebak">
-    <div class="noche">
-        <div class="columna">
+<section class="homebak container">
+    <div class="noche row">
+        <div class="columna col-md-6">
 
             <div class="log">
-                <img class="logo" src="~/recursos/logo.png" />
-            </div>
+                <img class="logo img-fluid" src="~/recursos/logo.png" />
            
-            <div class="redes">
+           
+            <div class="redes mt-3">
                 <a href="https://twitch.tv/elshandrew" target="_blank">
                     <i class="bi bi-twitch bis"></i>
                 </a>
@@ -31,7 +31,7 @@
                     <i class="bi bi-discord bis"></i>
                 </a>
             </div>
-            
+            </div>
             <div class="mt-4 text-center">
                 <span class="com1">Commissions: <span class="com2">OPEN</span></span>
                 
@@ -48,9 +48,9 @@
 
             </div>
         </div>
-        <div class="columna">
+        <div class="columna col-md-6">
             <div class="sh">
-                <img class="shan" src="~/recursos/police.png" />
+                <img class="shan img-fluid" src="~/recursos/police.png" />
             </div>
         </div>
 
