--- a/ShandrewPage/wwwroot/css/home-responsive.css
+++ b/ShandrewPage/wwwroot/css/home-responsive.css
@@ -1,45 +1,34 @@
-﻿
-@media (max-width: 1366px) {
+﻿@media (max-width: 767px) {
+    .columna {
+        
+        flex: 1;
+        margin: 20px;
+        margin-bottom: 0px;
+    }
+
+        .columna:first-child {
+            position: absolute;
+            flex: 1;
+        }
+
+    .redes a {
+       
+        margin-bottom:20px;
+    }
+
     .logo {
-        max-width: 500px;
-        height: auto;
-        animation: escale ease 4s infinite alternate;
-        position: relative;
-        z-index: 0;
-    }
-
-    .sh {
-        max-width: 600px;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: -1;
-    }
-}
-
-@media screen and (min-width: 933px) and (max-width: 1176px) {
-    .sh {
-        max-width: 354px;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: -1;
-    }
-}
-
-
-
-@media screen and (min-width: 480px) and (max-width: 932px) {
-    .sh {
         max-width: 100%;
-        position: relative;
-        top:-80%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: -1;
-        opacity:20%;
+    }
+
+    .sh {
+        margin-top: 0;
+        width: 600px;
+    }
+
+    .shan {
+       
+        
+        height: auto;
+        opacity: 0.2;
     }
 }
