--- a/ShandrewPage/Views/Portafolio/Index.cshtml
+++ b/ShandrewPage/Views/Portafolio/Index.cshtml
@@ -3,42 +3,36 @@
 @{
     ViewData["Title"] = "View";
 }
+<link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
+<h1 class="m-4 text-white">Portafolio</h1>
+<h2 class="text-center m-4 text-white">Avatares/Vtuber Models</h2>
+<div class="container">
+    @foreach (var item in Model)
+    {        
+        byte[] imagenBytes = item.imagen;
+        string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+        if (item.Tipo == "Avatar")
+        {
+        <div class="imgbox mb-5">
+            <img class="img" src="@base64">
+        </div>
+        }
+    }
+   
+</div>
+<h2 class="text-center m-4 text-white">Accessorios/Props</h2>
 
-<h1>View</h1>
+<div class="container2">
+    @foreach (var item in Model)
+    {
+        byte[] imagenBytes = item.imagen;
+        string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+        if (item.Tipo == "Accesorio")
+        {
+            <div class="imgbox mb-5">
+                <img class="img" src="@base64">
+            </div>
+        }
+    }
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.imagen)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-
-@foreach (var item in Model) {
-            byte[] imagenBytes = item.imagen;
-            string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.nombre)
-            </td>
-            <td>
-                    <img src="@base64">
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
