--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-opacity-0">
             <div class="container-fluid">
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span><i class="bi bi-list"></i></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex ">
+                <div class="navbar-collapse collapse d-sm-inline-flex  ">
                     <ul class="navbar-nav text-center justify-content-center  flex-grow-1 fixed-top mt-4 ">
                         <li class="nav-item m-2 ">
                             <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
@@ -57,15 +57,15 @@
             @RenderBody()
 
 
+   
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
     <footer class="footer text-muted">
         <div class="container text-white">
             &copy; 2023 - Shandrew
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
-
 </body>
 </html>
