rediseño nav y home

--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -4,58 +4,54 @@
 <link rel="stylesheet" href="~/css/home.css" />
 <link rel="stylesheet" href="~/css/home-responsive.css" />
 <section class="homebak container">
-    <div class="noche row">
-        <div class="columna col-md-6">
-
+    <div class="home">
+        <div class="info">
             <div class="log">
                 <img class="logo img-fluid" src="~/recursos/logo.png" />
-           
-           
-            <div class="redes mt-3">
-                <a href="https://twitch.tv/elshandrew" target="_blank">
-                    <i class="bi bi-twitch bis"></i>
-                </a>
-                @Html.Raw("<a href='https://www.tiktok.com/@elshandrew' target='_blank'>")
+                <div class="redes mt-3">
+                    <a href="https://twitch.tv/elshandrew" target="_blank">
+                        <i class="bi bi-twitch bis"></i>
+                    </a>
+                    @Html.Raw("<a href='https://www.tiktok.com/@elshandrew' target='_blank'>")
                     <i class="bi bi-tiktok bis"></i>
-                @Html.Raw("</a>")
-                <a href="https://twitter.com/ElShandrew" target="_blank">
-                    <i class="bi bi-twitter bis"></i>
-                </a>
-                @Html.Raw("<a href='https://www.youtube.com/@Shandrew' target='_blank'>")
+                    @Html.Raw("</a>")
+                    <a href="https://twitter.com/ElShandrew" target="_blank">
+                        <i class="bi bi-twitter bis"></i>
+                    </a>
+                    @Html.Raw("<a href='https://www.youtube.com/@Shandrew' target='_blank'>")
                     <i class="bi bi-youtube bis"></i>
-                @Html.Raw("</a>")
-                <a href="https://www.instagram.com/elshandrew/" target="_blank">
-                    <i class="bi bi-instagram bis"></i>
-                </a>
-                <a href="https://discord.com/invite/KtCBAfneRy" target="_blank">
-                    <i class="bi bi-discord bis"></i>
-                </a>
+                    @Html.Raw("</a>")
+                    <a href="https://www.instagram.com/elshandrew/" target="_blank">
+                        <i class="bi bi-instagram bis"></i>
+                    </a>
+                    <a href="https://discord.com/invite/KtCBAfneRy" target="_blank">
+                        <i class="bi bi-discord bis"></i>
+                    </a>
+                </div>
             </div>
-            </div>
-            <div class="mt-4 text-center">
-                <span class="com1">Commissions: <span class="com2">OPEN</span></span>
-                
-            </div>
-            <div class="mt-2 text-center">
-                <span class="desc">Shandrew - Junior Developer; Digital Artist; Vtuber.</span>
-            </div>
-            <div class="mt-2 text-center">
-                <span class="desc">About commissions please send an email to</span>
-               
-            </div>
-            <div class="mt-2 text-center">
-                <span class="desc">shandrewcontact@gmail.com or contact me in Twitter</span>
+            <div class="infome">
+                <div class="mt-4 text-center">
+                    <span class="com1">Commissions: <span class="com2">OPEN</span></span>
 
+                </div>
+                <div class="mt-2 text-center">
+                    <span class="desc">Shandrew - Junior Developer; Digital Artist; Vtuber.</span>
+                </div>
+                <div class="mt-2 text-center">
+                    <span class="desc">About commissions please send an email to</span>
+
+                </div>
+                <div class="mt-2 text-center">
+                    <span class="desc">shandrewcontact@gmail.com or contact me in Twitter</span>
+
+                </div>
             </div>
         </div>
-        <div class="columna col-md-6">
-            <div class="sh">
+        <div class="sandy">
+
                 <img class="shan img-fluid" src="~/recursos/police.png" />
-            </div>
-        </div>
 
-    </div>
-    <div >
+        </div>
 
     </div>
 </section>
