--- a/ShandrewPage/Views/Portafolio/Index.cshtml
+++ b/ShandrewPage/Views/Portafolio/Index.cshtml
@@ -22,7 +22,7 @@
 </div>
 <h2 class="text-center m-4 text-white">Accessorios/Props</h2>
 
-<div class="container2">
+<div class="container">
     @foreach (var item in Model)
     {
         byte[] imagenBytes = item.imagen;
