--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -9,44 +9,40 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="~/css/fuentes.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ShandrewPage.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-opacity-0">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm ">
             <div class="container-fluid">
 
-                <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span><i class="bi bi-list"></i></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex  ">
-                    <ul class="navbar-nav text-center justify-content-center  flex-grow-1 fixed-top mt-4 ">
+                    <ul class="navbar-nav  d-flex justify-content-evenly flex-grow-1 ">
                         <li class="nav-item m-2 ">
-                            <a class="nav-link text-black" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-door-fill"></i></a>
-                        </li>
-                        <li class="nav-item m-2 ">
-                            <a class="nav-link text-black " asp-area="" asp-controller="" asp-action=""><i class="bi bi-person-fill"></i></a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link text-black  " asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-brush-fill"></i></a>
+                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Portafolio</a>
                         </li>
                         <li class="nav-item m-2">
 
-                            <a class="nav-link text-black  " asp-area="" asp-controller="Portafolio" asp-action="Index"> <i class="bi bi-coin"></i></a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About_Me">About Me</a>
                         </li>
                         <li class="nav-item m-2">
-
-                            <a class="nav-link text-black " asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-info-lg"></i></a>
+                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Contact Me</a>
                         </li>
                         <li class="nav-item m-2">
-
-                            <a class="nav-link text-black " asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-question-lg"></i></a>
-                        </li>
-                        <li class="nav-item m-2">
-
-                            <a class="nav-link text-black" asp-area="" asp-controller="Portafolio" asp-action="Index"><i class="bi bi-postcard-heart-fill"></i></a>
+                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Services</a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +58,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    <footer class="footer text-muted">
+    <footer >
         <div class="container text-white">
             &copy; 2023 - Shandrew
         </div>
