About Me - Optimizacion Portafolio

--- a/ShandrewPage/Views/Home/About_Me.cshtml
+++ b/ShandrewPage/Views/Home/About_Me.cshtml
@@ -4,20 +4,19 @@
 
 <link rel="stylesheet" href="~/css/aboutme.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
-<section class="card card-body m-4 presentation">
+<section class="m-4 presentation">
     <div class="column p-3">
-        <img src="~/recursos/police.png" width="180em"/>
+        
         <h3> Shandrew</h3>
-        Hola soy <span class="fw-bold">Shandrew</span>. Soy un <span>artista vtuber 3D</span> </br>
-        que hace modelados 3D <span>Blender</span> y <span>Unity</span>,</br>
-        para streamers y demas. 
-        desde Junio del 2021,</br>el arte, la programación 
-        son mi pasión y mi trabajo. </br>
+        Hi, I'm <span class="fw-bold">Shandrew</span><span> vtuber artist</span> 
+        who makes 3D models with<span> Blender</span> and <span>Unity</span> for vtubers.
+        Since June 2021, art, programming 
+        are my passion and my work. 
+
     </div>
-    <div class="column p-3"><h3>Diseño</h3></div>
+    
     <div class="column p-3">
-        <h3>Info</h3><br />
-        <span>Mis herramientas:</span><br />
+        <h3>Tools:</h3>
         <ul>
             <li>Vroid</li>
             <li>Blender</li>
@@ -25,12 +24,15 @@
             <li>Photoshop</li>
             <li>After Effects</li>
         </ul>
-        <h3>Otros trabajos</h3><br />
+       
+    </div>
+    <div class="column p-3">
+        <h3>Others Jobs:</h3>
         <ul>
-            <li>Programación</li>
-            <li>Edición de video</li>
-            <li>Twitch Streamer</li>
+            <li>Programming</li>
+            <li>Streamer</li>
             <li>Youtuber</li>
         </ul>
     </div>
 </section>
+<div class="design m-4"><h3>Diseño</h3></div>
