--- a/ShandrewPage/Views/Home/Index.cshtml
+++ b/ShandrewPage/Views/Home/Index.cshtml
@@ -34,16 +34,20 @@
                     <span class="com1">Commissions: <span class="com2">OPEN</span></span>
 
                 </div>
+                <div class="mt-2">
+                    <span class="desc">Junior Developer | Digital Artist | Vtuber</span>
+                </div>
                 <div class="mt-2 text-center">
-                    <span class="desc">Shandrew - Junior Developer; Digital Artist; Vtuber.</span>
+                    <span class="desc">
+                        I’m a vtuber helping other vtubers, creating models and props with beautiful designs.
+                    </span>
                 </div>
                 <div class="mt-2 text-center">
                     <span class="desc">About commissions please send an email to</span>
 
                 </div>
-                <div class="mt-2 text-center">
-                    <span class="desc">shandrewcontact@gmail.com or contact me in Twitter</span>
-
+                <div class=" mt-2 text-center">
+                    <a class="adesc" href="mailto:shandrewcontac@gmail.com">shandrewcontact@gmail.com</a> <span class="desc">or contact me in</span>  <a class="adesc" href="https://twitter.com/ElShandrew">Twitter </a>
                 </div>
             </div>
         </div>
