--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
     @await RenderSectionAsync("Scripts", required: false)
     <footer >
         <div class="container text-white">
-            &copy; 2023 - Shandrew
+            &copy; Shandrew
         </div>
     </footer>
 </body>
