--- a/ShandrewPage/wwwroot/css/aboutme.css
+++ b/ShandrewPage/wwwroot/css/aboutme.css
@@ -16,13 +16,10 @@ span{
 .presentation {
     display: flex;
     flex-direction: row;
-    margin-top: 10%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 10%;
+
     padding: 20px;
     text-align: left;
-    font-size: 12px;
+    font-size: 23px;
     color: white;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
@@ -32,5 +29,30 @@ span{
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
 .column {
+    width:50%;
     margin: 5px;
+}
+.design {
+    width: 60%;
+    margin: 5px;
+}
+@media (max-width: 575px) {
+    .presentation{
+       background:none;
+       border:none;
+       padding-top:50px;
+       box-shadow:none;
+       flex-direction: column;
+    }
+    .column {
+
+        width: 100%;
+        margin: 5px;
+    }
+
+    .design {
+        width: 100%;
+        margin: 5px;
+    }
+
 }
