--- a/ShandrewPage/wwwroot/css/home.css
+++ b/ShandrewPage/wwwroot/css/home.css
@@ -14,7 +14,7 @@
 }
 body {
     background-image: url(../recursos/BG.gif);
-    background-size: cover;
+    background-size: contain;
     overflow-x: hidden;
 }
 .homebak {
@@ -115,6 +115,30 @@ body {
     transform:scale(1.3);
     animation: shine 0.5s ease-in-out infinite alternate;
 }
+.slider{
+    padding-top:50px;
+    width:84vw;
+    height:auto;
+    margin:0 auto;
+    overflow:hidden;
+}
+.slider .slide-track {
+    display: flex;
+    animation: scroll 40s linear infinite ;
+    -webkit-animation: scroll 40s linear infinite ;
+    width: calc(1000px * 4 );
+}
+.slider .slide{
+    width:333px;
+    margin-right:10px;
+}
+.slider .slide img{
+    width:100%;
+    height:auto;
+    border-radius:10px;
+    border : 4px solid #f4f6fb;
+    box-shadow: 1px 1px 2px #8c8c94, 0 0 5px #8c8c94, 0 0 15px #8c8c94;
+}
 @keyframes shine{
     0% {
         box-shadow: 1px 1px 2px #8c8c94, 0 0 5px #8c8c94, 0 0 15px #8c8c94;
@@ -126,7 +150,16 @@ body {
 
 
 
-
+@keyframes scroll{
+    0%{
+        -webkit-transform:translateX(0);
+        transform:translateX(0);
+    }
+    100% {
+        -webkit-transform: translateX(calc(-340px * 4));
+        transform: translateX(calc(-340px * 4));
+    }
+}
 
 
 
