--- a/ShandrewPage/wwwroot/css/home-responsive.css
+++ b/ShandrewPage/wwwroot/css/home-responsive.css
@@ -9,7 +9,7 @@
     }
     .sandy{
         position:absolute;
-        height:80%;
+        height:767px;
         z-index:-1;
     }
     .redes a {
