--- a/ShandrewPage/wwwroot/css/home.css
+++ b/ShandrewPage/wwwroot/css/home.css
@@ -115,12 +115,103 @@ body {
     transform:scale(1.3);
     animation: shine 0.5s ease-in-out infinite alternate;
 }
-.slider{
-    padding-top:50px;
-    width:84vw;
-    height:auto;
-    margin:0 auto;
-    overflow:hidden;
+
+.slider {
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter:blur(5px);
+    padding: 50px;
+    width: 95vw;
+    height: auto;
+    margin: 20px auto;
+    overflow: hidden;
+    border-radius: 20px;
+}
+.frame {
+    background-color: #f4f6fb;
+    border-radius: 24px;
+    height: 240px;
+    left: 8px;
+    top: 11px;
+    margin-left: 46px;
+    transform: rotate(-4deg);
+    width: 320px;
+    box-shadow: 1px 1px 2px #8c8c94, 0 0 5px #8c8c94, 0 0 15px #8c8c94;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    float:left;
+   
+}
+.icono-frame {
+    font-size: 8rem;
+    color: #080c14;
+    margin-left: 10px;
+    margin-top: 10px;
+    transform: rotate(-4deg);
+}
+.startcom {
+    font-family: 'Fredoka One';
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+
+    color: #f4f6fb;
+    font-size: 5rem;
+}
+.framesup {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content:center;
+    align-content:center;
+    margin-top:90px;
+   
+}
+.commision{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-content:center;
+    margin-top:50px;
+}
+.button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    margin-top: 50px;
+    width: auto;
+    height: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    transition: transform 0.3s ease-in-out;
+    border-radius: 40px;
+}
+.button i{
+    font-size: 1.5rem;
+    margin-right: 10px;
+}
+.button a {
+    text-decoration: none;
+    color: #080b10;
+    font-family: 'Fredoka One';
+    font-size: 1.5rem;
+    font-weight: 700;
+    
+}
+.button:hover {
+    box-shadow: 1px 1px 2px #8c8c94, 0 0 5px #8c8c94, 0 0 15px #8c8c94;
+    transform: scale(1.1);
+}
+.frametext p a{
+    text-decoration: none;
+    color: #50b2bb;
+    font-weight: 700;
+}
+.frametext p a:hover{
+    color: #f664ff;
 }
 .slider .slide-track {
     display: flex;
@@ -128,9 +219,27 @@ body {
     -webkit-animation: scroll 40s linear infinite ;
     width: calc(1000px * 4 );
 }
+.frametext {
+    font-family: 'Fredoka One';
+    padding-left: 100px;
+    width: 50%;
+    float: right;
+
+}
 .slider .slide{
+
     width:333px;
     margin-right:10px;
+}
+.title {
+    font-size: 48px;
+    font-weight: 400;
+    color: #f4f6fb;
+    
+}
+.title span {
+    color: #50b2bb;
+    font-weight:700;
 }
 .slider .slide img{
     width:100%;
@@ -138,6 +247,12 @@ body {
     border-radius:10px;
     border : 4px solid #f4f6fb;
     box-shadow: 1px 1px 2px #8c8c94, 0 0 5px #8c8c94, 0 0 15px #8c8c94;
+}
+.frametext p {
+    font-size: 1.2rem;
+    color: #f4f6fb;
+    font-weight: 400;
+    margin-top: 20px;
 }
 @keyframes shine{
     0% {
