Email-Contactme-SweetAlerts

--- a/ShandrewPage/wwwroot/css/aboutme.css
+++ b/ShandrewPage/wwwroot/css/aboutme.css
@@ -5,11 +5,11 @@
     font-style: normal;
 }
 h3 {
-    font-family: 'Roboto Black', sans-serif;
+    font-family: 'Fredoka One', sans-serif;
     color:aqua;
 }
 span{
-    font-family: 'Roboto Black', sans-serif;
+    font-family: 'Fredoka One', sans-serif;
     
 }
 
