--- a/ShandrewPage/Views/Home/About_Me.cshtml
+++ b/ShandrewPage/Views/Home/About_Me.cshtml
@@ -4,6 +4,9 @@
 
 <link rel="stylesheet" href="~/css/aboutme.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap" rel="stylesheet">
 <section class="m-4 presentation">
     <div class="column p-3">
         
