--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About_Me">About Me</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Contact Me</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ContactMe">Contact Me</a>
                         </li>
                         <li class="nav-item m-2">
                             <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Services</a>
