--- a/ShandrewPage/wwwroot/css/home-responsive.css
+++ b/ShandrewPage/wwwroot/css/home-responsive.css
@@ -4,6 +4,20 @@
         flex-direction:column;
         margin-top:70px;
     }
+    .formconctac {
+        margin-top: -10px;
+    }
+    .commision{
+        flex-direction:column;
+        width:100%;
+    }
+    .frametext{
+        padding:30px;
+        width:100%;
+    }
+    .framesup{
+        margin-top:60px;
+    }
     .info, .sandy{
         width:100%;
     }
