--- a/ShandrewPage/wwwroot/css/home.css
+++ b/ShandrewPage/wwwroot/css/home.css
@@ -24,8 +24,63 @@ body {
     justify-items: center;
     flex-direction: column;
 }
+.formconctac {
+    margin-top: 50px;
+    display: flex;
+    font-family: 'Fredoka One',sans-serif;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+}
+.formconctac h1{
+    display:flex;
+    justify-content:center;
+    align-content:center;
+    color: #f4f6fb;
+    margin: 5px;
+    
+}
 
+.email{
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+    align-content:center;
+    margin-top:20px;
+    font-family:'Fredoka One',sans-serif;
+}
 
+.form-commision {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+.email textarea{
+    margin-left: 20px;
+    width: 100%;
+    height: 100px;
+    border-radius: 20px;
+    padding-left: 20px;
+    font-size: 1.2rem;
+    color: #9298A8;
+    outline: none;
+}
+.email textarea:focus{
+    color:#000000;
+}
+.email input {
+    margin-left: 20px;
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    padding-left: 20px;
+    font-size: 1.2rem;
+    color: #9298A8;
+    outline: none;
+    font-family: 'Fredoka One',sans-serif;
+}
 .log{
     display:flex;
     flex-wrap:wrap;
@@ -150,13 +205,12 @@ body {
     transform: rotate(-4deg);
 }
 .startcom {
-    font-family: 'Fredoka One';
+    font-family: 'Fredoka', sans-serif;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
     text-align: center;
-
     color: #f4f6fb;
     font-size: 5rem;
 }
@@ -189,6 +243,10 @@ body {
     transition: transform 0.3s ease-in-out;
     border-radius: 40px;
 }
+.email .button{
+    margin-top:-10px;
+    color:#000000;
+}
 .button i{
     font-size: 1.5rem;
     margin-right: 10px;
@@ -220,7 +278,7 @@ body {
     width: calc(1000px * 4 );
 }
 .frametext {
-    font-family: 'Fredoka One';
+    font-family: 'Fredoka One',sans-serif;
     padding-left: 100px;
     width: 50%;
     float: right;
@@ -231,6 +289,7 @@ body {
     width:333px;
     margin-right:10px;
 }
+
 .title {
     font-size: 48px;
     font-weight: 400;
@@ -253,6 +312,9 @@ body {
     color: #f4f6fb;
     font-weight: 400;
     margin-top: 20px;
+}
+.form-content {
+
 }
 @keyframes shine{
     0% {
