--- a/ShandrewPage/Views/Portafolio/Index.cshtml
+++ b/ShandrewPage/Views/Portafolio/Index.cshtml
@@ -1,36 +1,40 @@
 ﻿@model IEnumerable<ShandrewPage.Models.Portafolio>
 
 @{
-    ViewData["Title"] = "View";
+    ViewData["Title"] = "Portfolio";
 }
 <link rel="stylesheet" href="~/css/StyleSheet.css" asp-append-version="true" />
-<h1 class="m-4 text-white">Portfolio</h1>
-<h2 class="text-center m-4 text-white">Vtuber Models</h2>
-<div class="container">
-    @foreach (var item in Model)
-    {        
-        byte[] imagenBytes = item.imagen;
-        string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
-        if (item.Tipo == "Avatar")
-        {
-        <div class="imgbox mb-5">
-            <img class="img" src="@base64">
-        </div>
+<link rel="stylesheet" href="~/css/home.css" />
+<link rel="stylesheet" href="~/css/home-responsive.css" />
+<section class="portfolio">
+    <h1 class="m-4 text-white">Portfolio</h1>
+    <h2 class="text-center m-4 text-white">Vtuber Models</h2>
+    <div class="container">
+        @foreach (var item in Model)
+        {        
+            byte[] imagenBytes = item.imagen;
+            string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+            if (item.Tipo == "Avatar")
+            {
+            <div class="imgbox mb-5">
+                <img class="img" src="@base64">
+            </div>
+            }
         }
-    }
    
-</div>
-<h2 class="text-center m-4 text-white">Props</h2>
+    </div>
+    <h2 class="text-center m-4 text-white">Props</h2>
 
-<div class="container">
-    @foreach (var item in Model.Where(x => x.Tipo == "Accesorio"))
-    {
-        byte[] imagenBytes = item.imagen;
-        string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
+    <div class="container">
+        @foreach (var item in Model.Where(x => x.Tipo == "Accesorio"))
+        {
+            byte[] imagenBytes = item.imagen;
+            string base64 = "data:image/png;base64," + Convert.ToBase64String(imagenBytes);
 
-        <div class="imgbox mb-5">
-            <img class="img" src="@base64">
-        </div>
-    }
-</div>
+            <div class="imgbox mb-5">
+                <img class="img" src="@base64">
+            </div>
+        }
+    </div>
 
+</section>
