--- a/ShandrewPage/Views/Shared/_Layout.cshtml
+++ b/ShandrewPage/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="ContactMe">Contact Me</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" asp-area="" asp-controller="Portafolio" asp-action="Index">Services</a>
+                            <a class="nav-link" asp-area="" asp-controller="Services" asp-action="Index">Services</a>
                         </li>
                     </ul>
                 </div>
