--- a/ShandrewPage/wwwroot/css/home.css
+++ b/ShandrewPage/wwwroot/css/home.css
@@ -1,5 +1,17 @@
 ﻿@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+@font-face {
+    font-family: 'Roboto Black';
+    src: url(../recursos/Roboto-Black.ttf) format('woff2'), url('../recursos/Roboto-Black.ttf') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
+@font-face {
+    font-family: 'Roboto Regular';
+    src: url(../recursos/Roboto-Regular.ttf) format('woff2'), url('../recursos/Roboto-Regular.ttf') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
     background-image: url(../recursos/BG.gif);
     background-size: contain;
